--- a/themes/academic/assets/sass/academic/_content.scss
+++ b/themes/academic/assets/sass/academic/_content.scss
@@ -23,12 +23,12 @@ article {
 
 .page-subtitle {
   font-size: 1.15rem;
-  color: rgba(0,0,0,.54);
+  color: rgba(0, 0, 0, .54);
   margin-bottom: 1rem;
 }
 
 .dark .page-subtitle {
-  color: rgba(255,255,255,0.54);
+  color: rgba(255, 255, 255, 0.54);
 }
 
 .split-header .page-subtitle {
@@ -45,13 +45,16 @@ article {
 }
 
 .split-header-image {
-  position: relative; /* Required for caption positioning */
+  position: relative;
+  /* Required for caption positioning */
   clear: both;
-  max-width: 580px;
+  max-width: 80%;
+  margin-top: 10%;
 }
 
 .article-header {
-  position: relative; /* Required for caption positioning */
+  position: relative;
+  /* Required for caption positioning */
   clear: both;
 }
 
@@ -100,6 +103,7 @@ article {
   opacity: 0.65;
   border-radius: 5px 0 0 0;
 }
+
 @media (min-width: 64em) {
   .article-header-caption {
     padding: 5px 10px;
@@ -121,7 +125,7 @@ article {
 }
 
 .dark .text-muted {
-  color: rgba(255,255,255,0.54);
+  color: rgba(255, 255, 255, 0.54);
 }
 
 .article-metadata {
@@ -129,11 +133,11 @@ article {
   overflow: hidden;
   font-size: 14px;
   letter-spacing: 0.03em;
-  color: rgba(0,0,0,0.54);
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .dark .article-metadata {
-  color: rgba(255,255,255,0.54);
+  color: rgba(255, 255, 255, 0.54);
 }
 
 .stream-meta.article-metadata {
@@ -143,15 +147,16 @@ article {
 /* For article page only, not lists. */
 article .article-metadata {
   margin-bottom: 20px;
-  line-height: 30px; /* Match share bar line height. */
+  line-height: 30px;
+  /* Match share bar line height. */
 }
 
 .article-metadata a {
-  color: rgba(0,0,0,.54);
+  color: rgba(0, 0, 0, .54);
 }
 
 .dark .article-metadata a {
-  color: rgba(255,255,255,0.54);
+  color: rgba(255, 255, 255, 0.54);
 }
 
 .article-metadata a:hover {
@@ -202,7 +207,7 @@ article .article-metadata {
 }
 
 .hr-light {
-  border-top: 1px solid rgba(0,0,0,.05);
+  border-top: 1px solid rgba(0, 0, 0, .05);
   margin-top: 0.5rem;
   margin-bottom: 1rem;
 }
@@ -252,11 +257,11 @@ article .article-metadata {
 .author-card {
   margin-top: 1rem;
   padding-top: 1rem;
-  border-top: 1px solid rgba(0,0,0,.05);
+  border-top: 1px solid rgba(0, 0, 0, .05);
 }
 
 .dark .author-card {
-  border-top: 1px solid rgba(255,255,255,.05);
+  border-top: 1px solid rgba(255, 255, 255, .05);
 }
 
 .author-card .portrait {
