--- a/themes/academic/assets/sass/academic/_root.scss
+++ b/themes/academic/assets/sass/academic/_root.scss
@@ -5,9 +5,10 @@
 html {
   font-family: $sta-font-body, sans-serif;
   font-size: #{$sta-font-size-small}px;
-  color: rgba(0,0,0,0.8);
+  color: rgba(0, 0, 0, 0.8);
   line-height: 1.65;
 }
+
 @media screen and (min-width: 58em) {
   html {
     font-size: #{$sta-font-size}px;
@@ -20,13 +21,18 @@ body {
   line-height: inherit;
   color: inherit;
   background-color: $sta-background;
-  margin-top: 70px; /* Offset body content by navbar height. */
+  margin-top: 70px;
+  /* Offset body content by navbar height. */
   padding-top: 0;
   counter-reset: captions;
 }
-@media screen and (max-width: 1200px) { /* Match max-width of .nav-bar query. */
+
+@media screen and (max-width: 1200px) {
+
+  /* Match max-width of .nav-bar query. */
   body {
-    margin-top: 50px; /* Offset body content by navbar height. */
+    margin-top: 50px;
+    /* Offset body content by navbar height. */
   }
 }
 
@@ -50,7 +56,9 @@ p {
 }
 
 /* Lists */
-ul, ol, dl {
+ul,
+ol,
+dl {
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -64,7 +72,12 @@ ul, ol, dl {
 }
 
 /* Headings */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $sta-font-heading, sans-serif;
   font-weight: 400;
   margin-top: 1rem;
@@ -83,19 +96,25 @@ h1, h2, h3, h4, h5, h6 {
   -ms-hyphens: manual;
   hyphens: manual;
 }
+
 h1 {
   font-size: 2.25rem;
 }
+
 h2 {
   margin-top: 1rem;
   font-size: 1.5rem;
 }
+
 h3 {
   font-weight: 700;
   margin-top: 1.5rem;
   font-size: 1.25rem;
 }
-h4, h5, h6 {
+
+h4,
+h5,
+h6 {
   font-weight: 700;
   margin-top: 1rem;
   font-size: 1rem;
@@ -166,14 +185,16 @@ code {
 
 pre {
   margin: 0 0 1rem 0;
-  background-color: rgb(248, 248, 248); /* Match default highlight theme. */
+  background-color: rgb(248, 248, 248);
+  /* Match default highlight theme. */
   border-color: rgb(248, 248, 248);
   font-size: 0.7rem;
   border-radius: 4px;
 }
 
 pre code {
-  white-space: pre; /* Override Bootstrap to preserve line breaks in code. */
+  white-space: pre;
+  /* Override Bootstrap to preserve line breaks in code. */
   overflow-x: auto;
 }
 
@@ -191,9 +212,11 @@ blockquote {
   color: #7a7a7a;
   border-left: .25rem solid #e5e5e5;
 }
+
 blockquote p:last-child {
   margin-bottom: 0;
 }
+
 @media (min-width: 30em) {
   blockquote {
     padding-right: 5rem;
@@ -209,6 +232,7 @@ blockquote p:last-child {
 .space-below {
   margin-bottom: 50px;
 }
+
 @media screen and (max-width: 768px) {
   .space-below {
     margin-bottom: 10px;
@@ -221,11 +245,21 @@ blockquote p:last-child {
   padding-left: 1rem;
   padding-top: 0.1rem;
   width: 100%;
+  max-width: 1320px;
+}
+
+.universal-wrapper .people-person {
+  text-align: center;
+}
+
+.universal-wrapper .people-person h1 {
+  margin-bottom: 1rem;
 }
 
 @media only screen and (min-width: 1001px) {
   .universal-wrapper {
-    width: 1000px;
+    // width: 1000px;
+    max-width: 1320px;
   }
 }
 
@@ -247,7 +281,8 @@ small,
 }
 
 .modal-title {
-  margin: 0; /* Override default h5 margin. */
+  margin: 0;
+  /* Override default h5 margin. */
 }
 
 .modal-content pre {
@@ -256,7 +291,7 @@ small,
 
 .modal-header {
   border: 0;
-  color: rgba(0,0,0,0.8);
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .modal-footer {
@@ -346,13 +381,13 @@ footer p {
 
 site-footer,
 footer a#back_to_top i {
-  color: rgba(0,0,0,0.54);
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .dark site-footer,
 .dark footer a#back_to_top i,
 .dark .docs .body-footer {
-  color: rgba(255,255,255,0.54);
+  color: rgba(255, 255, 255, 0.54);
 }
 
 /**************************************************
@@ -361,8 +396,8 @@ footer a#back_to_top i {
 
 .badge-light {
   border: none;
-  color: rgba(0,0,0,.68);
-  background: rgba(0,0,0,.05);
+  color: rgba(0, 0, 0, .68);
+  background: rgba(0, 0, 0, .05);
   font-weight: normal;
   border-radius: 3px;
   padding: 5px 10px;
@@ -370,18 +405,18 @@ footer a#back_to_top i {
   margin-bottom: 8px;
 }
 
-.article-tags > .badge-light:last-child {
+.article-tags>.badge-light:last-child {
   margin-right: 0;
 }
 
 .badge-light[href]:focus,
 .badge-light[href]:hover {
-  background: rgba(0,0,0,.1);
+  background: rgba(0, 0, 0, .1);
 }
 
 a.badge:focus,
 a.badge:hover {
-  color: rgba(0,0,0,.68);
+  color: rgba(0, 0, 0, .68);
 }
 
 .tag-cloud a {
@@ -459,7 +494,7 @@ a.badge:hover {
 
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .btn-primary:not(:disabled):not(.disabled):active:focus,
-.show > .btn-primary.dropdown-toggle:focus {
+.show>.btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 .2rem $sta-primary-light;
 }
 
@@ -477,33 +512,33 @@ table {
   font-size: 0.8rem;
 }
 
-table > thead > tr > th,
-table > tbody > tr > th,
-table > tfoot > tr > th,
-table > thead > tr > td,
-table > tbody > tr > td,
-table > tfoot > tr > td {
+table>thead>tr>th,
+table>tbody>tr>th,
+table>tfoot>tr>th,
+table>thead>tr>td,
+table>tbody>tr>td,
+table>tfoot>tr>td {
   padding: 8px;
   line-height: 1.43;
   vertical-align: top;
   border-top: 1px solid #ddd;
 }
 
-table > thead > tr > th {
+table>thead>tr>th {
   vertical-align: bottom;
   border-bottom: 2px solid #ddd;
 }
 
-table > caption + thead > tr:first-child > th,
-table > colgroup + thead > tr:first-child > th,
-table > thead:first-child > tr:first-child > th,
-table > caption + thead > tr:first-child > td,
-table > colgroup + thead > tr:first-child > td,
-table > thead:first-child > tr:first-child > td {
+table>caption+thead>tr:first-child>th,
+table>colgroup+thead>tr:first-child>th,
+table>thead:first-child>tr:first-child>th,
+table>caption+thead>tr:first-child>td,
+table>colgroup+thead>tr:first-child>td,
+table>thead:first-child>tr:first-child>td {
   border-top: 0;
 }
 
-table > tbody + tbody {
+table>tbody+tbody {
   border-top: 2px solid #ddd;
 }
 
@@ -512,14 +547,14 @@ table table {
 }
 
 /* Table Striped */
-table > tbody > tr:nth-child(odd) > td,
-table > tbody > tr:nth-child(odd) > th {
+table>tbody>tr:nth-child(odd)>td,
+table>tbody>tr:nth-child(odd)>th {
   background-color: #f9f9f9;
 }
 
 /* Table Hover */
-table > tbody > tr:hover > td,
-table > tbody > tr:hover > th {
+table>tbody>tr:hover>td,
+table>tbody>tr:hover>th {
   background-color: #e5e5e5;
 }
 
@@ -527,7 +562,7 @@ table > tbody > tr:hover > th {
  *  Alerts
  **************************************************/
 
-div.alert > div {
+div.alert>div {
   position: relative;
   display: block;
   font-size: 1rem;
@@ -536,15 +571,16 @@ div.alert > div {
   margin-bottom: 0;
 }
 
-div.alert div > * {
-  margin-bottom: .5rem;  /* Use smaller paragraph spacing than usual. */
+div.alert div>* {
+  margin-bottom: .5rem;
+  /* Use smaller paragraph spacing than usual. */
 }
 
-div.alert div > :last-child {
+div.alert div> :last-child {
   margin-bottom: 0;
 }
 
-div.alert > div:first-child::before {
+div.alert>div:first-child::before {
   position: absolute;
   top: -0.5rem;
   left: -2rem;
@@ -557,7 +593,7 @@ div.alert > div:first-child::before {
   text-align: center;
 }
 
-div.alert-warning > div:first-child::before {
+div.alert-warning>div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   color: #ff3860;
