--- a/themes/academic/layouts/authors/list.html
+++ b/themes/academic/layouts/authors/list.html
@@ -5,7 +5,44 @@
 {{/* If an account has not been created for this user, just display their name as the title. */}}
 {{ if not .File }}
 <div class="universal-wrapper pt-3">
-  <h1 itemprop="name">{{ .Title }}</h1>
+  <div class="col-12 col-sm-auto people-person">
+    {{ range where .Site.Pages "Params.name" .Name }}
+    {{ $avatar := (.Resources.ByType "image").GetMatch "*avatar*" }}
+    {{/* Get link to user's profile page. */}}
+    {{ $link := "" }}
+    {{ with site.GetPage (printf "/authors/%s" (path.Base (path.Split .Path).Dir)) }}
+    {{ $link = .RelPermalink }}
+    {{ end }}
+
+    {{ $src := "" }}
+    {{ if site.Params.gravatar }}
+    {{ $src = printf "https://s.gravatar.com/avatar/%s?s=200" (md5 .Params.email) }}
+    {{ else if $avatar }}
+    {{ $avatar_image := $avatar.Fill "150x150 Center" }}
+    {{ $src = $avatar_image.RelPermalink }}
+    {{ end }}
+    {{ if $src }}
+    <img class="portrait" src="{{ $src }}" alt="Avatar">
+    {{ end }}
+    <h1 itemprop="name">{{with .Params.personal_url}}
+      <a href="{{.}}">{{end}}{{ .Params.Name }}{{if .Params.personal_url}}</a>
+      {{end}}</h1>
+
+    <div class="portrait-title">
+      <!-- <h2>{{with .Params.personal_url}}<a href="{{.}}">{{end}}{{ .Params.name }}{{if .Params.personal_url}}</a>{{end}}
+      </h2> -->
+      {{ with .Params.role }}<h3>{{ . | markdownify | emojify }}</h3>{{ end }}
+      {{ with .Params.interests }}
+      <div class="col-md-12">
+        {{ range . }}
+        <div class="btn btn-outline-primary">{{ . | markdownify | emojify }}</div>
+        {{ end }}
+      </div>
+      {{ end }}
+    </div>
+
+    {{ end }}
+  </div>
 </div>
 {{ end }}
 
@@ -13,10 +50,10 @@
   <div class="container">
     {{/* Show the About widget if an account exists for this user. */}}
     {{ if .File }}
-      {{ $widget := "widgets/about.html" }}
-      {{ $username := (path.Base (path.Split .Path).Dir) }}{{/* Alternatively, use `index .Params.authors 0` */}}
-      {{ $params := dict "root" $ "page" . "author" $username }}
-      {{ partial $widget $params }}
+    {{ $widget := "widgets/about.html" }}
+    {{ $username := (path.Base (path.Split .Path).Dir) }}{{/* Alternatively, use `index .Params.authors 0` */}}
+    {{ $params := dict "root" $ "page" . "author" $username }}
+    {{ partial $widget $params }}
     {{end}}
 
     {{ $query := where .Pages ".IsNode" false }}
@@ -27,14 +64,12 @@
       <h3>{{ i18n "user_profile_latest" | default "Latest" }}</h3>
       <ul>
         {{ range $query }}
-        <li>
-          <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-        </li>
+        {{ partial "li_compact" . }}
         {{ end }}
       </ul>
     </div>
+    {{ end }}
   </div>
-  {{ end }}
 </section>
 
 {{- end -}}
