--- a/themes/academic/layouts/section/talks.html
+++ b/themes/academic/layouts/section/talks.html
@@ -12,10 +12,11 @@
 
       {{ range .Data.Pages.GroupByDate "2006" }}
       <div class="row" id="talk_list">
+        <div class="col-lg-1"></div>
         <div class="col-lg-2">
           <h3>{{ .Key }}</h3>
         </div>
-        <div class="col-lg-10">
+        <div class="col-lg-8">
 
           {{ range .Pages }}
           {{ if eq $.Params.view 1 }}
