--- a/themes/academic/layouts/section/accomplishments.html
+++ b/themes/academic/layouts/section/accomplishments.html
@@ -1,8 +1,7 @@
 {{- define "main" -}}
 
-{{ partial "page_header.html" . }}
-
 <div class="universal-wrapper">
+  <br />
   <div class="row">
     <div class="col-lg-12">
 
@@ -10,39 +9,68 @@
       <div class="article-style" itemprop="articleBody">{{ . }}</div>
       {{ end }}
 
-      {{/* Array of distinct years. */}}
-      {{ range .Pages.ByDate.Reverse }}
-      {{ $year := print (.Date.Format "2006") }}
-      {{ $.Scratch.SetInMap "years" $year $year }}
-      {{ end }}
-
-      <div id="container-publications">
-        {{ range .Pages.ByDate.Reverse }}
-
-        {{ if .Params.publication_types }}
-        {{ $.Scratch.Set "pubtype" (index .Params.publication_types 0) }}
-        {{ else }}
-        {{ $.Scratch.Set "pubtype" 0 }}
-        {{ end }}
-
-        <div
-          class="grid-sizer col-lg-12 isotope-item pubtype-{{ $.Scratch.Get "pubtype" }} year-{{ .Date.Format "2006" }}">
-          {{ if eq $.Params.view 1 }}
-          {{ partial "li_list" . }}
-          {{ else if eq $.Params.view 3 }}
-          {{ partial "li_card" . }}
-          {{ else if eq $.Params.view 4 }}
-          {{ partial "li_citation" . }}
-          {{ else }}
-          {{ partial "li_compact" . }}
-          {{ end }}
+      <div class="row" id="talk_list">
+        <div class="col-lg-2">
         </div>
+        <div class="col-lg-8">
 
-        {{ end }}
+          {{ range $idx, $key := sort .Pages ".Params.index"}}
+          {{ $item := . }}
+          {{/* Get summary. */}}
+          {{ $summary := "" }}
+          {{ if $item.Params.summary }}
+          {{ $summary = $item.Params.summary | markdownify | emojify }}
+          {{ else if .Params.abstract }}
+          {{ $summary = .Params.abstract | markdownify | emojify }}
+          {{ else if $item.Truncated }}
+          {{ $summary = $item.Summary }}
+          {{ else }}
+          {{ $summary = $item.Content }}
+          {{ end }}
+
+          <div class="card-simple" itemscope>
+            {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
+            {{ with $resource }}
+            <a href="{{ $item.Params.Link }}">
+              <img src="{{ $resource.RelPermalink }}" class="article-banner" itemprop="image" alt="">
+            </a>
+            {{end}}
+
+            <h3 class="article-title mb-1 mt-3" itemprop="name">
+              <a href="{{ $item.Params.Link }}" itemprop="url">{{ $item.Title }}</a>
+            </h3>
+
+            {{ with $summary }}
+            <div class="article-style" itemprop="articleBody">
+              {{ . }}
+            </div>
+            {{ end }}
+
+            <div class="btn-links">
+              {{ partial "page_links" (dict "page" $item "is_list" 1) }}
+            </div>
+
+          </div>
+
+          {{ end }}
+
+        </div>
       </div>
-
+      <br />
+      <div class="row" id="friend_links">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+          <h4>Friend Links</h4>
+          <ul>
+            {{ range .Params.Links }}
+            <li>{{ . | markdownify | emojify }}</li>
+            {{ end }}
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
+
 </div>
 
 {{- end -}}
