--- a/themes/academic/assets/sass/academic/_widgets.scss
+++ b/themes/academic/assets/sass/academic/_widgets.scss
@@ -518,10 +518,13 @@ ul.ul-edu li .description p.institution {
  **************************************************/
 
 .people-widget {
-  font-size: 0.8rem;
+  font-size: .8rem;
   text-align: center;
-  width: 80%;
-  margin-left: 10%;
+  max-width: 1320px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .people-widget .portrait-title h2 {
