--- a/themes/academic/assets/sass/academic/_widgets.scss
+++ b/themes/academic/assets/sass/academic/_widgets.scss
@@ -535,6 +535,14 @@ ul.ul-edu li .description p.institution {
   font-size: 0.7rem;
 }
 
+img.alumni{
+  width: 30%!important;
+}
+h2.alumni {
+  margin-top: 10px;
+  font-size: 0.8rem!important;
+}
+
 .people-widget .portrait {
   width: 80%;
   max-width: 150px;
